DevOps-Project-21/Reddit-Project/K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reddit-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # CORS Headers
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx
  rules:
  # Rule 1: Custom Domain
  - host: thersdevelopers.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reddit-clone-service
            port:
              number: 80
  # Rule 2: WWW Subdomain
  - host: www.thersdevelopers.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reddit-clone-service
            port:
              number: 80
  # Rule 3: The "Catch-All" (For AWS Load Balancer URL)
  # Notice there is NO 'host' line here. This matches everything else.
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reddit-clone-service
            port:
              number: 80
